# signal-gateway

./: .gitignore  Cargo.toml  README.md  build-release.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
prom-client/: Cargo.toml
prom-client/src/: builders.rs  error.rs  labels.rs  lib.rs  messages.rs  plot.rs  traits.rs
prometheus-http-client/: Cargo.toml  README.md
prometheus-http-client/src/: builders.rs  lib.rs  plot.rs
signal-cli-jsonrpc-client/: Cargo.toml  README.md
signal-cli-jsonrpc-client/src/: lib.rs  rpc.rs  trust_set.rs
signal-cli-jsonrpc-client/src/transports/: mod.rs  tcp.rs
signal-gateway/: Cargo.toml  README.md
signal-gateway-app-code/: Cargo.toml
signal-gateway-app-code/src/: lib.rs
signal-gateway-app-code/tests/: integration.rs
signal-gateway-assistant/: Cargo.toml  README.md
signal-gateway-assistant/claude/: Cargo.toml  README.md
signal-gateway-assistant/claude/src/: api.rs  lib.rs  message_buffer.rs
signal-gateway-assistant/src/: assistant.rs  chat_message.rs  lib.rs  response.rs  tools.rs
signal-gateway-bin/: Cargo.toml
signal-gateway-bin/src/: app_code.rs  code_tool.rs  listen_http.rs  main.rs  repo_code.rs
signal-gateway-bin/src/admin_http/: mod.rs
signal-gateway-bin/src/admin_netcat/: mod.rs
signal-gateway-bin/src/json/: json_lines.rs  mod.rs
signal-gateway-bin/src/syslog/: mod.rs
signal-gateway-bin/src/udp_json/: json_lines.rs  mod.rs
signal-gateway-code-tool/: Cargo.toml  README.md
signal-gateway-code-tool/src/: cached.rs  config.rs  lib.rs
signal-gateway-code-tool/tests/: integration.rs
signal-gateway-log-ingest/: Cargo.toml  README.md
signal-gateway-log-ingest/src/: lib.rs  path_prefix.rs
signal-gateway-log-ingest/src/json/: mod.rs
signal-gateway-repo-code/: Cargo.toml
signal-gateway-repo-code/src/: config.rs  lib.rs
signal-gateway-repo-code/tests/: integration.rs
signal-gateway/src/: alertmanager.rs  circular_buffer.rs  concurrent_map.rs  config.rs  http.rs  human_duration.rs  init_logging.rs  jsonrpc.rs  lazy_map_cleaner.rs  lib.rs  limiter_sequence.rs  log_format.rs  log_message.rs  main.rs  message_handler.rs  plotter.rs  rate_limiter.rs  signal_jsonrpc.rs
signal-gateway/src/assistant/: mod.rs  worker.rs
signal-gateway/src/claude/: mod.rs  tools.rs  worker.rs
signal-gateway/src/gateway/: admin_uuids.rs  circular_buffer.rs  command_router.rs  log_buffer.rs  log_handler.rs  mod.rs  rate_limiter.rs  rate_limiter_set.rs  route.rs  signal_trust_set.rs
signal-gateway/src/prometheus/: mod.rs  plot.rs
signal-gateway/src/transports/: ipc.rs  mod.rs  stream_codec.rs
