[package]
name = "prometheus-http-client"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
displaydoc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

plotters = { workspace = true, optional = true }

[dev-dependencies]
conf = { workspace = true }
conf-extra = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["plot"]
plot = ["dep:plotters"]
rustls-tls = ["reqwest/rustls-tls"]
