[package]
name = "signal-cli-jsonrpc-client"
version = "0.1.1"
description = "JSON-RPC client for signal-cli daemon"
keywords = ["signal", "jsonrpc", "messaging"]
categories = ["network-programming"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
