[package]
name = "signal-gateway-app-code"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
signal-gateway = { path = "../signal-gateway", default-features = false }

async-trait = { workspace = true }
flate2 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
