[package]
name = "signal-gateway-assistant"
version = "0.1.0"
description = "AI assistant traits and types for signal-gateway"
keywords = ["signal", "assistant", "ai", "chatbot"]
categories = ["asynchronous"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
