[package]
name = "signal-gateway-bin"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "signal-gateway"
path = "src/main.rs"

[features]
default = ["signal-gateway/default"]
plot = ["signal-gateway/plot"]
rustls-tls = ["signal-gateway/rustls-tls"]

[dependencies]
signal-gateway = { workspace = true }
signal-gateway-assistant-claude = { workspace = true }
signal-gateway-repo-code = { path = "../signal-gateway-repo-code" }
signal-gateway-log-ingest = { path = "../signal-gateway-log-ingest" }

async-trait = { workspace = true }
conf = { workspace = true }
conf-extra = { workspace = true }
dotenvy = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
