[package]
name = "signal-gateway-code-tool"
version = "0.1.0"
description = "Code fetching tool for signal-gateway-assistant AI integration"
keywords = ["signal", "assistant", "github", "code"]
categories = ["development-tools"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[dependencies]
signal-gateway-assistant = { workspace = true }

async-trait = { workspace = true }
flate2 = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
