[package]
name = "signal-gateway-log-ingest"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
signal-gateway = { workspace = true }

chrono = { workspace = true }
conf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syslog_rfc5424 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
