[package]
name = "signal-gateway-log-ingest"
version = "0.1.0"
description = "Log ingestion endpoints (syslog, JSON) for signal-gateway"
keywords = ["signal", "logging", "syslog", "ingestion"]
categories = ["network-programming"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[dependencies]
signal-gateway = { workspace = true }

chrono = { workspace = true }
conf = { workspace = true }
globset = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
syslog_rfc5424 = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
