[package]
name = "signal-gateway"
version = "0.1.0"
description = "Gateway service for Signal messaging with AI assistant integration"
keywords = ["signal", "messaging", "gateway", "assistant"]
categories = ["network-programming"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[features]
default = ["plot", "rustls-tls"]
plot = ["prometheus-http-client/plot", "dep:chrono-tz", "dep:rand", "dep:walkdir"]
rustls-tls = ["prometheus-http-client/rustls-tls", "reqwest/rustls-tls"]

[dependencies]
prometheus-http-client = { workspace = true, default-features = false }
signal-cli-jsonrpc-client = { workspace = true }
signal-gateway-assistant = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
conf = { workspace = true }
conf-extra = { workspace = true }
displaydoc = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Optional dependencies for plot feature
chrono-tz = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
