[package]
name = "signal-gateway-assistant-claude"
version = "0.1.0"
description = "Claude AI implementation of signal-gateway-assistant"
keywords = ["signal", "assistant", "ai", "claude", "anthropic"]
categories = ["asynchronous"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lints]
workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
signal-gateway-assistant = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
conf = { workspace = true }
conf-extra = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
